Remove split SPI backward-compatibility methods